--- a/xiaomi/css/xiaomi.css
+++ b/xiaomi/css/xiaomi.css
@@ -389,4 +389,465 @@ main {
       transform: scale(1.02);
       margin-top: -5px; }
 
+.laoda {
+  background: #F5F5F5; }
+
+.mains {
+  width: 1226px;
+  margin: 0 auto;
+  padding-bottom: 60px;
+  padding-top: 38px; }
+  .mains .jiaD h5 {
+    margin-bottom: 1rem;
+    margin-top: 38px; }
+    .mains .jiaD h5 p {
+      float: left;
+      font-size: 1.4rem; }
+    .mains .jiaD h5 ul {
+      float: right; }
+      .mains .jiaD h5 ul li {
+        float: left;
+        margin-left: 1rem;
+        font-size: 1rem;
+        padding-bottom: 0.4rem; }
+      .mains .jiaD h5 ul li:nth-of-type(1) {
+        border-bottom: 2px solid orangered; }
+  .mains .jiaD .jiaD-div .jiaD-div-left {
+    float: left;
+    width: 235px;
+    height: 615px; }
+    .mains .jiaD .jiaD-div .jiaD-div-left img {
+      width: 100%;
+      display: block; }
+    .mains .jiaD .jiaD-div .jiaD-div-left p:nth-of-type(2) {
+      margin-top: 12px; }
+  .mains .jiaD .jiaD-div .jiaD-div-right {
+    float: left;
+    width: 991px;
+    height: 615px; }
+    .mains .jiaD .jiaD-div .jiaD-div-right li {
+      width: 235px;
+      height: 301.5px;
+      float: left;
+      text-align: center;
+      background: white;
+      margin-left: 12px;
+      position: relative;
+      transition: 0.4s; }
+      .mains .jiaD .jiaD-div .jiaD-div-right li a {
+        color: #000; }
+        .mains .jiaD .jiaD-div .jiaD-div-right li a p:nth-of-type(1) {
+          margin-top: 16px; }
+          .mains .jiaD .jiaD-div .jiaD-div-right li a p:nth-of-type(1) img {
+            width: 160px;
+            height: 160px; }
+        .mains .jiaD .jiaD-div .jiaD-div-right li a p:nth-of-type(3) {
+          color: #B0B0B0;
+          font-size: 12px;
+          margin-top: 8px; }
+        .mains .jiaD .jiaD-div .jiaD-div-right li a p:nth-of-type(4) {
+          color: #B0B0B0;
+          font-size: 14px;
+          margin-top: 16px; }
+          .mains .jiaD .jiaD-div .jiaD-div-right li a p:nth-of-type(4) span {
+            color: orangered; }
+          .mains .jiaD .jiaD-div .jiaD-div-right li a p:nth-of-type(4) i {
+            text-decoration: line-through; }
+        .mains .jiaD .jiaD-div .jiaD-div-right li a .dw {
+          background: #E53C38;
+          color: white;
+          width: 50px;
+          padding: 0.2rem 0.6rem;
+          position: absolute;
+          top: 0;
+          left: 90px; }
+    .mains .jiaD .jiaD-div .jiaD-div-right li:nth-of-type(5) {
+      margin-top: 12px; }
+    .mains .jiaD .jiaD-div .jiaD-div-right li:nth-of-type(6) {
+      margin-top: 12px; }
+    .mains .jiaD .jiaD-div .jiaD-div-right li:nth-of-type(7) {
+      margin-top: 12px; }
+    .mains .jiaD .jiaD-div .jiaD-div-right li:nth-of-type(8) {
+      margin-top: 12px; }
+      .mains .jiaD .jiaD-div .jiaD-div-right li:nth-of-type(8) .div1 {
+        height: 134px;
+        font-size: 12px; }
+        .mains .jiaD .jiaD-div .jiaD-div-right li:nth-of-type(8) .div1 .divzi {
+          float: left;
+          margin-top: 42px;
+          margin-left: 30px;
+          text-align: left; }
+          .mains .jiaD .jiaD-div .jiaD-div-right li:nth-of-type(8) .div1 .divzi p {
+            margin-bottom: 10px; }
+          .mains .jiaD .jiaD-div .jiaD-div-right li:nth-of-type(8) .div1 .divzi span {
+            color: orangered; }
+        .mains .jiaD .jiaD-div .jiaD-div-right li:nth-of-type(8) .div1 .div-p {
+          float: right;
+          margin-right: 20px;
+          margin-top: 10px; }
+          .mains .jiaD .jiaD-div .jiaD-div-right li:nth-of-type(8) .div1 .div-p img {
+            width: 110px;
+            height: 110px; }
+        .mains .jiaD .jiaD-div .jiaD-div-right li:nth-of-type(8) .div1 .div-p1 {
+          float: right;
+          margin-top: 35px;
+          margin-right: 40px; }
+      .mains .jiaD .jiaD-div .jiaD-div-right li:nth-of-type(8) .div1:hover {
+        box-shadow: 5px 5px 10px 2px #ccc;
+        transform: scale(1.02); }
+      .mains .jiaD .jiaD-div .jiaD-div-right li:nth-of-type(8) hr {
+        height: 12px;
+        background: #F5F5F5;
+        border: none; }
+    .mains .jiaD .jiaD-div .jiaD-div-right li:hover {
+      box-shadow: 5px 5px 10px 2px #ccc;
+      transform: scale(1.02); }
+  .mains h3 {
+    width: 100%;
+    font-size: 1.4rem;
+    line-height: 25px;
+    margin-top: 42px; }
+    .mains h3 .h3-a {
+      float: left; }
+    .mains h3 .h3-b {
+      float: right;
+      font-size: 1.4px; }
+      .mains h3 .h3-b span {
+        display: inline-block;
+        border: 1px solid #ccc;
+        text-align: center;
+        float: left;
+        height: 15px;
+        width: 20px;
+        line-height: 15px;
+        margin-top: 4px; }
+      .mains h3 .h3-b span:nth-of-type(1) {
+        color: #ccc;
+        border-right: none; }
+  .mains .ul-tiu-j {
+    margin-top: 16px;
+    padding-bottom: 40px; }
+    .mains .ul-tiu-j li {
+      width: 235.6px;
+      background: #FAFAFA;
+      text-align: center;
+      font-size: 14px;
+      padding-bottom: 42px;
+      float: left;
+      margin-left: 12px;
+      transition: 0.3s; }
+      .mains .ul-tiu-j li a {
+        color: #000000; }
+        .mains .ul-tiu-j li a p:nth-of-type(1) {
+          padding-top: 40px;
+          width: 110px;
+          margin: 0 auto; }
+          .mains .ul-tiu-j li a p:nth-of-type(1) img {
+            width: 100%; }
+        .mains .ul-tiu-j li a p:nth-of-type(2) {
+          margin-top: 36px; }
+        .mains .ul-tiu-j li a p:nth-of-type(3) {
+          margin-top: 12px;
+          color: #ccc; }
+        .mains .ul-tiu-j li a span {
+          display: block;
+          margin-top: 17px;
+          color: #FF752F; }
+    .mains .ul-tiu-j li:nth-of-type(1) {
+      margin-left: 0; }
+    .mains .ul-tiu-j li:hover {
+      box-shadow: 5px 5px 10px 2px #ccc;
+      transform: scale(1.02);
+      margin-top: -5px; }
+  .mains h4 {
+    font-size: 2rem;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+    font-size: 1.4rem; }
+  .mains .rePing li {
+    width: 291px;
+    float: left;
+    margin-left: 12px;
+    background: white;
+    font-size: 14px; }
+    .mains .rePing li img {
+      width: 291px; }
+    .mains .rePing li p:nth-of-type(1) {
+      margin: 2rem;
+      line-height: 1.6rem; }
+    .mains .rePing li p:nth-of-type(2) {
+      margin: 0 2rem;
+      color: #ccc; }
+    .mains .rePing li p:nth-of-type(3) {
+      margin: 0.6rem 2rem 2rem; }
+      .mains .rePing li p:nth-of-type(3) span {
+        color: orangered;
+        margin-left: 1rem; }
+  .mains .rePing li:nth-of-type(1) {
+    margin-left: 0; }
+  .mains .rePing li:hover {
+    box-shadow: 5px 5px 10px 2px #ccc;
+    transform: scale(1.02);
+    margin-top: -5px; }
+  .mains .nR li {
+    width: 291px;
+    float: left;
+    margin-left: 12px;
+    text-align: center;
+    background: white; }
+  .mains .nR li:nth-of-type(1) {
+    margin-left: 0;
+    border-top: #FDB83C 2px solid; }
+    .mains .nR li:nth-of-type(1) p:nth-of-type(1) {
+      color: #FDB83C;
+      margin-top: 4rem; }
+    .mains .nR li:nth-of-type(1) p:nth-of-type(2) {
+      margin-top: 2rem;
+      font-size: 18px; }
+    .mains .nR li:nth-of-type(1) p:nth-of-type(3) {
+      color: #ccc;
+      line-height: 1.6rem;
+      width: 160px;
+      margin: 0 auto;
+      margin-top: 0.6rem;
+      font-size: 12px; }
+    .mains .nR li:nth-of-type(1) p:nth-of-type(4) {
+      margin: 0.6rem 0 1rem; }
+    .mains .nR li:nth-of-type(1) p:nth-of-type(6) {
+      margin-bottom: 1rem; }
+      .mains .nR li:nth-of-type(1) p:nth-of-type(6) span {
+        display: inline-block;
+        width: 5px;
+        height: 5px;
+        border: 1px solid #FDB83C;
+        border-radius: 50%;
+        margin: 0 1rem; }
+      .mains .nR li:nth-of-type(1) p:nth-of-type(6) span:nth-of-type(2) {
+        border: none;
+        background: #ccc; }
+      .mains .nR li:nth-of-type(1) p:nth-of-type(6) span:nth-of-type(3) {
+        border: none;
+        background: #ccc; }
+  .mains .nR li:nth-of-type(2) {
+    border-top: #96CC6A 2px solid; }
+    .mains .nR li:nth-of-type(2) p:nth-of-type(1) {
+      color: #96CC6A;
+      margin-top: 4rem; }
+    .mains .nR li:nth-of-type(2) p:nth-of-type(2) {
+      margin-top: 2rem;
+      font-size: 18px; }
+    .mains .nR li:nth-of-type(2) p:nth-of-type(3) {
+      color: #ccc;
+      line-height: 1.6rem;
+      width: 160px;
+      margin: 0 auto;
+      margin-top: 0.6rem;
+      font-size: 12px; }
+    .mains .nR li:nth-of-type(2) p:nth-of-type(4) {
+      margin: 0.6rem 0 1rem; }
+    .mains .nR li:nth-of-type(2) p:nth-of-type(6) {
+      margin-bottom: 1rem; }
+      .mains .nR li:nth-of-type(2) p:nth-of-type(6) span {
+        display: inline-block;
+        width: 5px;
+        height: 5px;
+        border: 1px solid #96CC6A;
+        border-radius: 50%;
+        margin: 0 1rem; }
+      .mains .nR li:nth-of-type(2) p:nth-of-type(6) span:nth-of-type(2) {
+        border: none;
+        background: #ccc; }
+      .mains .nR li:nth-of-type(2) p:nth-of-type(6) span:nth-of-type(3) {
+        border: none;
+        background: #ccc; }
+      .mains .nR li:nth-of-type(2) p:nth-of-type(6) span:nth-of-type(4) {
+        border: none;
+        background: #ccc; }
+  .mains .nR li:nth-of-type(3) {
+    border-top: #E85956 2px solid; }
+    .mains .nR li:nth-of-type(3) p:nth-of-type(1) {
+      color: #E85956;
+      margin-top: 4rem; }
+    .mains .nR li:nth-of-type(3) p:nth-of-type(2) {
+      margin-top: 2rem;
+      font-size: 18px; }
+    .mains .nR li:nth-of-type(3) p:nth-of-type(3) {
+      color: #ccc;
+      line-height: 1.6rem;
+      width: 160px;
+      margin: 0 auto;
+      margin-top: 0.6rem;
+      font-size: 12px; }
+    .mains .nR li:nth-of-type(3) p:nth-of-type(4) {
+      margin: 0.6rem 0 1rem; }
+    .mains .nR li:nth-of-type(3) p:nth-of-type(6) {
+      margin-bottom: 1rem; }
+      .mains .nR li:nth-of-type(3) p:nth-of-type(6) span {
+        display: inline-block;
+        width: 5px;
+        height: 5px;
+        border: 1px solid #E85956;
+        border-radius: 50%;
+        margin: 0 1rem; }
+      .mains .nR li:nth-of-type(3) p:nth-of-type(6) span:nth-of-type(2) {
+        border: none;
+        background: #ccc; }
+      .mains .nR li:nth-of-type(3) p:nth-of-type(6) span:nth-of-type(3) {
+        border: none;
+        background: #ccc; }
+  .mains .nR li:nth-of-type(4) {
+    border-top: #47A6F3 2px solid; }
+    .mains .nR li:nth-of-type(4) p:nth-of-type(1) {
+      color: #47A6F3;
+      margin-top: 4rem; }
+    .mains .nR li:nth-of-type(4) p:nth-of-type(2) {
+      margin-top: 2rem;
+      font-size: 18px; }
+    .mains .nR li:nth-of-type(4) p:nth-of-type(3) {
+      color: #ccc;
+      line-height: 1.6rem;
+      width: 160px;
+      margin: 0 auto;
+      margin-top: 0.6rem;
+      font-size: 12px; }
+    .mains .nR li:nth-of-type(4) p:nth-of-type(4) {
+      margin: 0.6rem 0 1rem; }
+    .mains .nR li:nth-of-type(4) p:nth-of-type(6) {
+      margin-bottom: 1rem; }
+      .mains .nR li:nth-of-type(4) p:nth-of-type(6) span {
+        display: inline-block;
+        width: 5px;
+        height: 5px;
+        border: 1px solid #47A6F3;
+        border-radius: 50%;
+        margin: 0 1rem; }
+      .mains .nR li:nth-of-type(4) p:nth-of-type(6) span:nth-of-type(2) {
+        border: none;
+        background: #ccc; }
+      .mains .nR li:nth-of-type(4) p:nth-of-type(6) span:nth-of-type(3) {
+        border: none;
+        background: #ccc; }
+  .mains .nR li:hover {
+    box-shadow: 5px 5px 10px 2px #ccc;
+    transform: scale(1.02);
+    margin-top: -5px; }
+  .mains h5 {
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+    font-size: 1.4rem; }
+    .mains h5 span:nth-of-type(1) {
+      float: left;
+      font-size: 1.4rem; }
+    .mains h5 span:nth-of-type(2) {
+      float: right;
+      margin-top: 0.4rem;
+      font-size: 14px; }
+      .mains h5 span:nth-of-type(2) b {
+        display: inline-block;
+        width: 13px;
+        height: 13px;
+        background: #ccc;
+        border-radius: 50%;
+        text-align: center;
+        color: white;
+        margin-left: 0.6rem; }
+  .mains .shiPin li {
+    width: 291px;
+    float: left;
+    text-align: center;
+    margin-left: 12px;
+    background: white;
+    position: relative; }
+    .mains .shiPin li img {
+      width: 100%; }
+    .mains .shiPin li .kai {
+      position: absolute;
+      top: 130px;
+      left: 20px;
+      width: 40px;
+      height: 30px; }
+    .mains .shiPin li p:nth-of-type(1) {
+      margin-top: 2rem;
+      font-size: 14px; }
+    .mains .shiPin li p:nth-of-type(2) {
+      margin-top: 0.8rem;
+      margin-bottom: 2rem;
+      color: #ccc;
+      font-size: 12px; }
+  .mains .shiPin li:nth-of-type(1) {
+    margin-left: 0; }
+  .mains .shiPin li:hover {
+    box-shadow: 5px 5px 10px 2px #ccc;
+    transform: scale(1.02);
+    margin-top: -5px; }
+
+footer .di {
+  width: 1200px;
+  margin: 0 auto; }
+  footer .di .weixiu {
+    width: 100%;
+    border-bottom: 1px solid #ccc;
+    padding: 0.6rem 0; }
+    footer .di .weixiu li {
+      width: 240px;
+      float: left;
+      text-align: center; }
+      footer .di .weixiu li p:nth-of-type(1) {
+        margin-top: 8px;
+        width: 120px;
+        float: left;
+        text-align: end; }
+      footer .di .weixiu li p:nth-of-type(2) {
+        margin-top: 16px;
+        width: 117px;
+        float: left;
+        text-align: left;
+        border-right: 1px solid #ccc; }
+    footer .di .weixiu li:nth-of-type(5) p:nth-of-type(2) {
+      border-right: none; }
+footer #lianjie {
+  width: 1200px;
+  margin: 0 auto; }
+  footer #lianjie .yikuai {
+    width: 975px;
+    float: left;
+    margin-top: 3rem; }
+    footer #lianjie .yikuai ul {
+      float: left; }
+      footer #lianjie .yikuai ul li {
+        margin-bottom: 1rem; }
+      footer #lianjie .yikuai ul li:nth-of-type(1) {
+        margin-bottom: 2rem; }
+    footer #lianjie .yikuai ul:nth-of-type(2) {
+      margin-left: 100px; }
+    footer #lianjie .yikuai ul:nth-of-type(3) {
+      margin-left: 100px; }
+    footer #lianjie .yikuai ul:nth-of-type(4) {
+      margin-left: 100px; }
+    footer #lianjie .yikuai ul:nth-of-type(5) {
+      margin-left: 100px; }
+    footer #lianjie .yikuai ul:nth-of-type(6) {
+      margin-left: 100px; }
+  footer #lianjie .erkuai {
+    width: 224px;
+    float: left;
+    border-left: 1px solid #ccc;
+    text-align: center;
+    margin-top: 3rem; }
+    footer #lianjie .erkuai p:nth-of-type(1) {
+      color: orangered;
+      font-size: 1.6rem; }
+    footer #lianjie .erkuai p:nth-of-type(2) {
+      width: 100px;
+      margin: 0 auto;
+      margin-top: 1rem;
+      line-height: 1.4rem; }
+    footer #lianjie .erkuai p:nth-of-type(3) {
+      width: 100px;
+      margin: 0 auto;
+      margin-top: 1rem;
+      border: 1px solid orangered;
+      padding: 0.4rem;
+      color: orangered; }
+
 /*# sourceMappingURL=xiaomi.css.map */
